# github-stats

./: .gitignore  Cargo.toml  Cross.toml  README.md  config.example.toml  cross-release.sh
example/: README.md  github-stats.service  github-stats.timer  update_stats.sh
src/: chart.rs  db.rs  github.rs  lib.rs  main.rs
